fix overflow-X

--- a/src/app/token-list/token-list.component.css
+++ b/src/app/token-list/token-list.component.css
@@ -22,7 +22,8 @@
 
 .content{
   height: 1200px;
-  background-color: lightslategray
+  background-color: lightslategray;
+  overflow-X:hidden
 }
 
 .content button{
